# infra-did-dart

./: .gitattributes  CHANGELOG.md  FFI.md  README-SS58.md  README.md  a.json  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
doc/api/: __404error.html  index.html  index.json  search.html
doc/api/infra_did_dart/: Abi-class.html  AbiAction-class.html  AbiErrorMessages-class.html  AbiExtensions-class.html  AbiResp-class.html  AbiRicardianClauses-class.html  AbiStruct-class.html  AbiStructField-class.html  AbiTable-class.html  AbiType-class.html  AbiVariants-class.html  Account-class.html  AccountNames-class.html  Action-class.html  ActionArgs-class.html  ActionBlock-class.html  ActionReceipt-class.html  ActionWithReceipt-class.html  Actions-class.html  KeyType.html  (+103 more)
example/: README.md  infra_did_dart_example.dart  key_example.dart  pubspec.yaml  resolver_example.dart  verifiable_example.dart
example/lib/: main.dart
ios/: infra_did_dart.podspec
ios/Classes/: InfraDidDartPlugin.h  InfraDidDartPlugin.m  SwiftInfraDidDartPlugin.swift
lib/: bindings.dart  infra_did_dart.dart
lib/src/: infra_did_dart_base.dart
macos/: infra_did_dart.podspec  libinfra_did_binding.dylib
macos/Classes/: InfraDidDartPlugin.h  SwiftInfraDidDartPlugin.swift
rust/: Cargo.toml  Makefile  install.sh
rust/src/: error.rs  lib.rs
test/: infra_did_dart.dart  infra_did_dart_test.dart  key_test.dart  resolver_test.dart  verifiable_test.dart
test/infra_ss58_did/: infra_ss58_did.dart  util.dart
test/polkadart/: extrinsic.dart  query.dart
(+592 files in other folders)
