[package]
name = "infra-did-binding"
version = "0.1.0"
authors = ["InfraBlockchain"]
edition = "2021"

[lib]
name = "infra_did_binding"
crate-type = ["staticlib", "cdylib"]

[dependencies]
hex = "0.4.3"
schnorrkel = "0.9.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
substrate-bip39 = "0.4.4"
tiny-bip39 = { version = "1.0.0", default-features = false }
base58 = "0.1.0"
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
lazy_static = "1.3.0"
regex = "1.2.1"
blake2-rfc = "0.2.18"
rustc-hex = "2.0.1"
ed25519-dalek = "1.0.1"
bs58 = "0.4.0"
infra-did = { path = "/Users/user/Desktop/infra-did-rust" }
ssi-dids = "0.1.1"
thiserror = "1.0.40"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread"] }
